2000-06-14  Jim Meyering  <meyering@lucent.com>

	* grep-changelog: Fix typos in comments.  Remove trailing blanks.

2000-06-11  Jason Rumney  <jasonr@gnu.org>

	* makefile.nt: Add targets for ebrowse.

	* ebrowse.c [WINDOWS_NT]: Use stricmp instead of strcasecmp to
	compare filenames.

2000-06-06  Gerd Moellmann  <gerd@gnu.org>

	* ebrowse.c (ymalloc): Renamed from xmalloc.
	(yrealloc): Renamed from xrealloc.

2000-05-21  Dave Love  <fx@gnu.org>

	* movemail.c: Include config.h, not ../src/config.h.
	(Errmsg): Bump length.

	* pop.c (ERROR_MAX): Increase to 160.

2000-05-04  Gerd Moellmann  <gerd@gnu.org>

	* ebrowse.c (DEFAULT_OUTFILE): Set to `BROWSE'.

2000-05-02  Eli Zaretskii  <eliz@is.elta.co.il>

	* ebrowse.c (PATH_LIST_SEPARATOR) [__MSDOS__ || WINDOWSNT]: Define
	to semi-colon.
	(FILENAME_EQ): New macro, for comparing file names.
	(add_member_decl, add_global_decl, add_member_defn): Use
	FILENAME_EQ.
	(process_file): Don't assume that fread always reads as many bytes
	as it was told to (DOS-style CR-LF text files fail this logic).
	(open_file): Allocate enough space for path->path plus the file
	name and the slash.

2000-04-19  Dave Love  <fx@gnu.org>

	* etags.c (Texinfo_functions): New function.
	(lang_names): Install it.
	(Texinfo_suffixes): New variable.

2000-04-19  Gerd Moellmann  <gerd@gnu.org>

	* ebrowse.c (xmalloc, xrealloc): Rewritten.
	(declaration): Remove parameter IS_EXTERN.
	(class_definition): Remove unused variable.

2000-04-09  Gerd Moellmann  <gerd@gnu.org>

	* Makefile.in (INSTALLABLES): Add ebrowse.
	(ebrowse): New target.

	* ebrowse.c: New file.

2000-03-29  Andreas Schwab  <schwab@suse.de>

	* make-docfile.c (scan_lisp_file): Also look for `defsubst'.

2000-03-02  Gerd Moellmann  <gerd@gnu.org>

	* etags.c (lisp_suffixes)  Add `LSP'.

2000-02-10  Francesco Potorti`  <pot@gnu.org>

	* etags.c (iswhite): Redefined not to consider '\0' as white
	space, and use it throughout in place of isspace, thus preventing a