@@ -1,3 +1,8 @@
+2000-06-23  Dave Love  <fx@gnu.org>
+
+	* ebrowse.c: Move config.h before other includes (which may use
+	feature tests).
+
 2000-06-14  Jim Meyering  <meyering@lucent.com>
 
 	* grep-changelog: Fix typos in comments.  Remove trailing blanks.
